--- a/Understanding_F1_score.ipynb
+++ b/Understanding_F1_score.ipynb
@@ -64,6 +64,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Note: This metric is based on choosing positive label. Which label is set as positive, others are set as negative labels"
+      ],
+      "metadata": {
+        "id": "BW0D6SGodfWy"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
@@ -350,32 +359,6 @@
       "metadata": {
         "id": "YO3OVQkdRRWD"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "np.unique(y_true)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "n97Fey_tLNnB",
-        "outputId": "784c0089-6916-4e06-ed5e-c4af0c17d1d7"
-      },
-      "execution_count": 45,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([0, 1])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 45
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -1032,139 +1015,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "for label in labels:\n",
-        "  _y_true=y_true[:,label]\n",
-        "  _y_pred=y_pred[:,label]\n",
-        "  TP,FP,FN=cal_TP_FP_FN(_y_true,_y_pred,pos_label=0)\n",
-        "  print(TP,FP,FN)\n",
-        "  TP,FP,FN=cal_TP_FP_FN(_y_true,_y_pred,pos_label=1)\n",
-        "  print(TP,FP,FN)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "hsqWcsW_NRfx",
-        "outputId": "aba70d02-94f0-4c66-a9ba-d667e55076ee"
-      },
-      "execution_count": 98,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1 2 2\n",
-            "5 2 2\n",
-            "2 2 3\n",
-            "3 3 2\n",
-            "1 5 2\n",
-            "2 2 5\n",
-            "2 0 4\n",
-            "4 4 0\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from sklearn.metrics import multilabel_confusion_matrix\n",
-        "multilabel_confusion_matrix(y_true, y_pred)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "WLGJI01aNgIy",
-        "outputId": "43cdaafd-34f9-48aa-f760-12856fc73afc"
-      },
-      "execution_count": 72,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[[1, 2],\n",
-              "        [2, 5]],\n",
-              "\n",
-              "       [[2, 3],\n",
-              "        [2, 3]],\n",
-              "\n",
-              "       [[1, 2],\n",
-              "        [5, 2]],\n",
-              "\n",
-              "       [[2, 4],\n",
-              "        [0, 4]]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 72
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "(1+5)/(1+5+2)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MNcVfGcpSU5N",
-        "outputId": "6b336067-69db-406e-e05d-de0a11875a87"
-      },
-      "execution_count": 100,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.75"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 100
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(classification_report(y_true,y_pred,digits=5))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KlsoDfagNsA9",
-        "outputId": "2559c35f-23fa-49f3-a75f-4ae9a9c9546e"
-      },
-      "execution_count": 73,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           0    0.71429   0.71429   0.71429         7\n",
-            "           1    0.50000   0.60000   0.54545         5\n",
-            "           2    0.50000   0.28571   0.36364         7\n",
-            "           3    0.50000   1.00000   0.66667         4\n",
-            "\n",
-            "   micro avg    0.56000   0.60870   0.58333        23\n",
-            "   macro avg    0.55357   0.65000   0.57251        23\n",
-            "weighted avg    0.56522   0.60870   0.56258        23\n",
-            " samples avg    0.59167   0.59167   0.54238        23\n",
-            "\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "Note: Only take 1 as pos_label"
@@ -1605,15 +1455,47 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "Compare all above results with sklearn results "
       ],
       "metadata": {
-        "id": "8Ak8NNgwZ9J6"
+        "id": "y2m8NK3zdTl3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(classification_report(y_true,y_pred,digits=5))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KlsoDfagNsA9",
+        "outputId": "2559c35f-23fa-49f3-a75f-4ae9a9c9546e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0    0.71429   0.71429   0.71429         7\n",
+            "           1    0.50000   0.60000   0.54545         5\n",
+            "           2    0.50000   0.28571   0.36364         7\n",
+            "           3    0.50000   1.00000   0.66667         4\n",
+            "\n",
+            "   micro avg    0.56000   0.60870   0.58333        23\n",
+            "   macro avg    0.55357   0.65000   0.57251        23\n",
+            "weighted avg    0.56522   0.60870   0.56258        23\n",
+            " samples avg    0.59167   0.59167   0.54238        23\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
