--- a/Understanding_F1_score.ipynb
+++ b/Understanding_F1_score.ipynb
@@ -56,8 +56,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "- Precision -> num true positive samples over total num positive samples\n",
-        "- Recall -> num true positive samples over total true samples"
+        "- Precision -> num true positive samples over total num predicted positive samples\n",
+        "- Recall -> num true positive samples over total num actual true samples"
       ],
       "metadata": {
         "id": "FA3DWnFaXrhS"
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "LQlAU2kmTRvD"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -101,7 +101,7 @@
       "metadata": {
         "id": "kTPIRZf_txEg"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -115,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -157,7 +157,7 @@
         "id": "hyaAWt7zTg69",
         "outputId": "085f34ca-8c9c-423d-b100-a9917511d531"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -199,7 +199,7 @@
       "metadata": {
         "id": "izazqeqWlWwQ"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -211,7 +211,7 @@
       "metadata": {
         "id": "Svqc4w7-qh6e"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -223,7 +223,7 @@
       "metadata": {
         "id": "kGkbKhxEqqeq"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -235,7 +235,7 @@
       "metadata": {
         "id": "wdUTXvL8quWR"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -254,7 +254,7 @@
         "id": "qn1sOjG7n4f-",
         "outputId": "e89958b7-bbda-4f84-a888-cae6f5780e75"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -284,7 +284,7 @@
         "id": "UkK6fCN2oGnk",
         "outputId": "cfb205ca-d078-470a-f89c-15cb4dae3a45"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -311,7 +311,7 @@
         "id": "yKTXZ6Ktez6o",
         "outputId": "b0c3de9c-352f-4d72-b09e-407d796b05da"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -337,7 +337,7 @@
         "id": "nKe6pyqIogYB",
         "outputId": "f414fb04-944d-48a1-a6fb-4133a623f127"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,7 +394,7 @@
       "metadata": {
         "id": "yiM94MygRUOm"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -409,7 +409,7 @@
         "id": "enJbvcviqQ0e",
         "outputId": "359a3ca9-e0a1-40d0-b7b5-29b8ec28d896"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -435,7 +435,7 @@
         "id": "aTlOvhU2s9qb",
         "outputId": "9ace1872-ad51-4a57-a9b2-ed53340375c1"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -491,7 +491,7 @@
       "metadata": {
         "id": "wdLxnORvRpOF"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -506,7 +506,7 @@
         "id": "1ZDflbFXLVoD",
         "outputId": "9d2e8ff9-b30c-4ce8-e12f-de5bde7442db"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -532,7 +532,7 @@
         "id": "VDVuQN-muBF_",
         "outputId": "d43c95b0-05fd-46ad-eeb7-0249b3979ca5"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -584,7 +584,7 @@
       "metadata": {
         "id": "sq34KBxYvOQB"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -599,7 +599,7 @@
         "id": "OzHrEUbJLi_P",
         "outputId": "9f32d55b-e453-45b8-e8a4-d4fb3351e7ca"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -625,7 +625,7 @@
         },
         "outputId": "b2c0ee51-6c21-43ad-ed6f-5d4dfeff89ba"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -670,7 +670,7 @@
         },
         "outputId": "a5c938ff-e2af-415a-a5ec-c771e37d42c7"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -696,7 +696,7 @@
       "metadata": {
         "id": "B3CNUwunKoM9"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -712,7 +712,7 @@
         "id": "JU8b6hvVKnTE",
         "outputId": "b1c266a8-8383-41f7-db25-ea0e9097da22"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -751,7 +751,7 @@
         "id": "EzAaxAbhL1mz",
         "outputId": "802ce87f-0c31-480a-e517-cd2b5188b8d9"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -777,7 +777,7 @@
         "id": "-np-oRbtMHPI",
         "outputId": "c14ab1dd-56e1-4c33-dad1-acad72406179"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -812,7 +812,7 @@
         "id": "NfT6ILv4MEoc",
         "outputId": "be8c9d4e-7fee-4e19-d0b5-981c439f3d30"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -838,7 +838,7 @@
         "id": "C6CLOGWgMTPl",
         "outputId": "cc37c736-0476-4f40-e13e-c2412a6d79ef"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -873,7 +873,7 @@
         "id": "kjwDdYlqMUE8",
         "outputId": "fe08f0e2-5a69-42a6-8cf7-1a26a5172cc8"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -899,7 +899,7 @@
         "id": "lmNCk9XVMZcR",
         "outputId": "e9c773f8-f930-4d09-92d9-304b68885ad1"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -939,7 +939,7 @@
       "metadata": {
         "id": "R3NcG3iJRYBT"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -955,7 +955,7 @@
         "id": "9hFOX-WaMajA",
         "outputId": "a1f45711-ecca-4360-c6ed-0e758e928e9a"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -991,7 +991,7 @@
         "id": "cQlJciABNMNT",
         "outputId": "b23c046c-3c81-4aa9-f877-ab8f0a5a5bdf"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1043,7 +1043,7 @@
         "id": "o4ubOdMcN4wt",
         "outputId": "48a7b769-d9db-4765-ac01-1120db3482c5"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1080,7 +1080,7 @@
         "id": "XIiTM9r7OLrN",
         "outputId": "9bdc2b30-6e2e-448c-9ae8-eddc27c844cf"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1137,7 +1137,7 @@
       "metadata": {
         "id": "q-4RT8JKQzQs"
       },
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1152,7 +1152,7 @@
         "id": "NW8t26t6RDn2",
         "outputId": "eedbf9a4-9466-46d7-b720-ec3a2f1dd0cf"
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1178,7 +1178,7 @@
         "id": "XSL4ro_DVxyX",
         "outputId": "3e20c5fa-8d86-4c45-a6a1-20e2248669f4"
       },
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1224,7 +1224,7 @@
       "metadata": {
         "id": "Zq5fhxgVRfao"
       },
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1239,7 +1239,7 @@
         "id": "M1dBzO-6RwWa",
         "outputId": "5da0ac4d-26f1-46cd-c63d-17ebc9df3088"
       },
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1265,7 +1265,7 @@
         "id": "SVZMGjOaYQD2",
         "outputId": "ae14e07e-47e1-4232-b7e5-e3f9d224793e"
       },
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1313,7 +1313,7 @@
       "metadata": {
         "id": "CioM4QavWFho"
       },
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1328,7 +1328,7 @@
         "id": "8dYYFpj_WYBG",
         "outputId": "d974b9fb-76e1-47ee-8a2e-2d90a0944a7d"
       },
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1354,7 +1354,7 @@
         "id": "Vy8bDpLzWdZw",
         "outputId": "7b7a8c6c-835c-490a-b7ea-d4025baa5937"
       },
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1399,7 +1399,7 @@
       "metadata": {
         "id": "cYr5aKQXXKr8"
       },
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1414,7 +1414,7 @@
         "id": "cnfu5wuKZOpN",
         "outputId": "174d1f62-e9a4-4b3a-8098-265d86d0e7e6"
       },
-      "execution_count": 157,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1440,7 +1440,7 @@
         "id": "hZYKCpCHZ6I6",
         "outputId": "7e110068-d555-4804-8c15-aed52134d2bc"
       },
-      "execution_count": 158,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1475,7 +1475,7 @@
         "id": "KlsoDfagNsA9",
         "outputId": "2559c35f-23fa-49f3-a75f-4ae9a9c9546e"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
